# shader-tester-qt

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  gl_widget.cpp  gl_widget.hpp  key_handler.cpp  key_handler.hpp  main.cpp  main_window.cpp  main_window.hpp  mesh.hpp  scene.xml  shader.hpp  shader2.hpp  shader_configs.xml  shader_program.hpp  shader_program2.hpp  style.qss  uniform.hpp
glad/: glad.c  glad.h
